# Performance_review

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
deployment/: docker-compose.yml
deployment/nginx/: Dockerfile  default.conf
src/: asgi.py  global_constants.py  urls.py  wsgi.py
src/apps/core/: pagination.py  permissions.py  services.py
src/apps/core/management/commands/: deadline_notify.py  run_scheduler.py
src/apps/employee/: admin.py  choices.py  models.py  serializers.py  urls.py  views.py
src/apps/employee/fixtures/: employees.json  skills.json
src/apps/employee/migrations/: 0001_initial.py  0002_auto_20210707_1806.py  0003_employee_unit.py  0004_employee_role.py
src/apps/employee/services/: create_employee_service.py  save_employee_skills_service.py  update_employee_service.py
src/apps/performance_review/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/apps/performance_review/migrations/: 0001_initial.py  0002_rename_goals_comment_goal.py  0003_auto_20210709_1909.py  0004_auto_20210814_1534.py
src/apps/performance_review/services/: create_comment_service.py  create_criteria_service.py  create_goal_service.py  create_review_service.py  mark_goal_done_service.py  update_comment_service.py  update_criteria_service.py  update_goal_service.py
src/apps/unit/: admin.py  models.py  serializers.py
src/apps/unit/fixtures/: units.json
src/apps/unit/migrations/: 0001_initial.py  0002_alter_unit_id.py
src/settings/: __init__.py  base.py  local.py  staging.py
